--- a/fronted/index.html
+++ b/fronted/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Decentralized Task Marketplace</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <header>
+    <h1>Decentralized Task Marketplace</h1>
+    <button id="connectWalletBtn">Connect Wallet</button>
+  </header>
+
+  <section id="task-form-container">
+    <h2>Create a Task</h2>
+    <input id="taskTitle" type="text" placeholder="Task Title">
+    <textarea id="taskDescription" placeholder="Task Description"></textarea>
+    <input id="rewardAmount" type="number" placeholder="Reward (ETH)">
+    <button id="createTaskBtn">Post Task</button>
+  </section>
+
+  <section id="task-list">
+    <h2>Available Tasks</h2>
+    <div id="tasks"></div>
+  </section>
+
+  <script src="app.js"></script>
+</body>
+</html>
 
